# snowpark_udf_poc

./: .gitignore  README.md  pyproject.toml
sql/: create_tables.sql
src/: app.py  functions.py
src/util/: config.py  local.py
