[tool.poetry]
name = "simple-repo-main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
snowflake-connector-python = "^3.7.0"
snowflake-sqlalchemy = "^1.5.1"
snowflake-snowpark-python = "^1.2.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
